# Demo-InteractiveAndRobustMeshBooleans-Wasm

./: .gitignore  README.md
wasm/: CMakeLists.txt  Dockerfile  embuild.sh
wasm/lib/IARMB/: CMakeLists.txt  main.cpp
wasm/lib/IARMB/arrangements/code/: debug.h
wasm/src/: boolean_wasm.cpp  export_function.h  main.cpp
www/: package-lock.json  package.json
www/public/wasm/: boolean_op.js
www/src/app/: globals.css  page.tsx
www/src/components/: BooleanOperation.tsx  ObjModel.tsx  Viewer.tsx
www/src/wasm/boolean_op/: BooleanOp.ts  WasmLoader.tsx  WasmModuleHolder.tsx  boolean_op.d.ts
